added to README

--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -2,7 +2,7 @@ body {
     overflow-x: hidden;
  }
 
- .imggg {
+ .imgmain {
     background-image: url("/images/img3.png");
     
 }
@@ -39,9 +39,6 @@ td, th {
     padding: 8px;
 }
 
-/*tr:nth-child(even) {
-    background-color: #7FABB5;
-}*/
 
 #homeworkstyle {
     font-family: 'Schoolbell', cursive;
