--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -14,7 +14,7 @@
 body {
   overflow-x: hidden; }
 
-.imggg {
+.imgmain {
   background-image: url("/images/img3.png"); }
 
 #pichead {
@@ -43,9 +43,6 @@ td, th {
   text-align: left;
   padding: 8px; }
 
-/*tr:nth-child(even) {
-    background-color: #7FABB5;
-}*/
 #homeworkstyle {
   font-family: 'Schoolbell', cursive;
   font-size: 30px;
