--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -1,5 +1,5 @@
 {{!-- Main Content --}}
-        <div class="reusable-padding imggg">
+        <div class="reusable-padding imgmain">
             <div class="container-fluid">
                 <!-- Teacher Content relating to homework and Upcoming Events -->
                 <div class="row">
@@ -30,9 +30,9 @@
                             
 
 						  </div>
-                 <button class="btn btn-success" id="makePost">Post a Comment</button>
+                            <button class="btn btn-success" id="makePost">Post a Comment</button>
 						</form> 
-            <br>
+                <br>
 
 				    </div>
                 </div> 
