push to heroku with final revisions

--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -18,6 +18,7 @@
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Sriracha" rel="stylesheet">
       
 		
 	</head>
