--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -102,8 +102,8 @@ td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
-    font-family: 'Gloria Hallelujah', cursive;
-    font-size: 17px;
+    font-family: 'Sriracha', cursive;
+    font-size: 20px;
     color: white;
 }
 
@@ -147,6 +147,18 @@ td, th {
 
 #submitUser {
     font-size: 13px;
+}
+
+#datetime {
+    color: #16D8DB;
+}
+
+#usersize {
+    color: #B9C9C8;
+}
+
+#sizename {
+    font-size: 20px;
 }
 
 
