--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -93,8 +93,8 @@ td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
-  font-family: 'Gloria Hallelujah', cursive;
-  font-size: 17px;
+  font-family: 'Sriracha', cursive;
+  font-size: 20px;
   color: white; }
 
 .dUser {
@@ -130,6 +130,15 @@ td, th {
 
 #submitUser {
   font-size: 13px; }
+
+#datetime {
+  color: #16D8DB; }
+
+#usersize {
+  color: #B9C9C8; }
+
+#sizename {
+  font-size: 20px; }
 
 /* Sidebar Toggles */
 #wrapper {
